--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@ h1 {
 	<img src="assets/quote-a-finite-game-is-played-for-the-purpose-of-winning-an-infinite-game-for-the-purpose-james-p-carse-44-75-75.jpg" />
 	<h1>有限的游戏</h1>
 	<ol>
-	  <li class="disable"><a>#4 通胀的过程</a></li>	
-	  <li class="disable"><a>#3 汇率简史：中国篇</a></li>	
-	  <li class="disable"><a>#2 汇率简史：美国篇</a></li>
+	  <li class="disable"><a>#3 通胀的过程</a></li>	
+	  <li class="disable"><a>#2 货币政策与汇率发展简史</a></li>
 	  <li><a href="pdfs/1.pdf">#1 周其仁「汇率评论」笔记</a></li>
 	</ol>
 	</div>
